data/derived/fa15/progs/unify/prog0952.ml.out
Characters 18-23:
  let _ = assoc (-1,"bob",[("ranjit",85);("william",23);("moose",44)]);;
                    ^^^^^
Error: This expression has type string but an expression was expected of type
         'a * int
